--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -29,25 +29,20 @@ body {
 -------------------------------------------------- */
 
 /* Carousel base class */
-
 .carousel {
   margin-bottom: 4rem;
 }
-
 /* Since positioning the image, we need to help out the caption */
-
 .carousel-caption {
   bottom: 3rem;
   z-index: 10;
 }
 
 /* Declare heights because of positioning of img element */
-
 .carousel-item {
   height: 32rem;
 }
-
-.carousel-item>img {
+.carousel-item > img {
   position: absolute;
   top: 0;
   left: 0;
@@ -55,40 +50,41 @@ body {
   height: 32rem;
 }
 
+
 /* MARKETING CONTENT
 -------------------------------------------------- */
 
 /* Center align the text within the three columns below the carousel */
-
 .marketing .col-lg-4 {
   margin-bottom: 1.5rem;
   text-align: center;
 }
-
 .marketing h2 {
   font-weight: 400;
 }
-
+/* rtl:begin:ignore */
 .marketing .col-lg-4 p {
   margin-right: .75rem;
   margin-left: .75rem;
 }
+/* rtl:end:ignore */
+
 
 /* Featurettes
 ------------------------- */
 
 .featurette-divider {
-  margin: 5rem 0;
-  /* Space out the Bootstrap <hr> more */
+  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
 }
 
 /* Thin out the marketing headings */
-
 .featurette-heading {
   font-weight: 300;
   line-height: 1;
+  /* rtl:remove */
   letter-spacing: -.05rem;
 }
+
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
@@ -100,6 +96,7 @@ body {
     font-size: 1.25rem;
     line-height: 1.4;
   }
+
   .featurette-heading {
     font-size: 50px;
   }
@@ -110,17 +107,4 @@ body {
     margin-top: 7rem;
   }
 }
-.bd-placeholder-img {
-  font-size: 1.125rem;
-  text-anchor: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
 
-@media (min-width: 768px) {
-  .bd-placeholder-img-lg {
-    font-size: 3.5rem;
-  }
-}
